[gd_scene load_steps=8 format=3 uid="uid://dppdeqskdv8hc"]

[ext_resource type="Script" path="res://Engine/Resources/Scenes/CollectibleDisplay.gd" id="1_mhrok"]
[ext_resource type="Texture2D" uid="uid://cfevdrefpiq4l" path="res://Assets/Items/Lyre.tres" id="2_mx77s"]
[ext_resource type="Shader" path="res://Engine/Resources/Scenes/CollectibleTexture.gdshader" id="3_g7q54"]
[ext_resource type="Script" path="res://Engine/Resources/UtilityNode/TooltipGrabber.gd" id="4_qke8a"]

[sub_resource type="ShaderMaterial" id="ShaderMaterial_0nv3h"]
resource_local_to_scene = true
shader = ExtResource("3_g7q54")
shader_parameter/glow = 0.0

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_sncxu"]
content_margin_top = 1.0
bg_color = Color(0, 0, 0, 1)
expand_margin_top = 1.0

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_kwqat"]
bg_color = Color(1, 1, 1, 1)

[node name="CollectibleDisplay" type="Control"]
layout_mode = 3
anchors_preset = 0
offset_right = 16.0
offset_bottom = 16.0
script = ExtResource("1_mhrok")
texture = ExtResource("2_mx77s")

[node name="BGRect" type="ColorRect" parent="."]
unique_name_in_owner = true
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0.164706, 0.431373, 0.690196, 0.5)

[node name="CollectibleTexture" type="TextureRect" parent="."]
unique_name_in_owner = true
material = SubResource("ShaderMaterial_0nv3h")
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("2_mx77s")

[node name="ProgressBar" type="ProgressBar" parent="."]
unique_name_in_owner = true
modulate = Color(0.968627, 0.807843, 0.309804, 1)
layout_mode = 1
anchors_preset = 12
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_top = -1.0
grow_horizontal = 2
grow_vertical = 0
theme_override_styles/background = SubResource("StyleBoxFlat_sncxu")
theme_override_styles/fill = SubResource("StyleBoxFlat_kwqat")
max_value = 300.0
show_percentage = false

[node name="TooltipGrabber" type="Node" parent="."]
unique_name_in_owner = true
script = ExtResource("4_qke8a")
text = "[color=#2a6eb0]ITEM_LYRE[/color]
[0/300 MANA]
[color=gray]ITEM_LYRE_DESCRIPTION[/color]"

[connection signal="interacted" from="TooltipGrabber" to="." method="_on_interacted"]
